--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -1,14 +1,11 @@
 <div
-  class="bg-[url(https://neluttu.github.io/pro-profile/wallpaper.jpg)] bg-[#292240] flex items-center justify-center min-h-screen flex-col"
+  class="flex min-h-screen flex-col items-center justify-center bg-[#292240] bg-[url(https://neluttu.github.io/pro-profile/wallpaper.jpg)]"
 >
   <section
-    class="w-3/5 max-w-lg bg-[#231f39]/60 rounded-[6px] shadow-[0px_15px_39px_16px_rgba(52,45,91,0.65)] backdrop-blur-sm my-5 p-6"
+    class="my-5 w-3/5 max-w-lg rounded-[6px] bg-[#231f39]/60 p-6 shadow-[0px_15px_39px_16px_rgba(52,45,91,0.65)] backdrop-blur-sm"
   >
     <div class="md:w-72">
-      <h2
-        class="text-2xl font-bold mb-1"
-        id="oldBlogTitle"
-      >{{title}}</h2>
+      <h2 class="mb-1 text-2xl font-bold" id="oldBlogTitle">{{title}}</h2>
     </div>
     <p class="text-sm">Created by
       <strong>
@@ -26,13 +23,13 @@
     {{#if isAuthor}}
       <button
         id="editButton"
-        class="absolute z-50 right-28 top-[-23px] lg:top-4 text-xs font-bold rounded-sm bg-slate-400 p-2 text-slate-800 duration-300 hover:bg-indigo-200"
+        class="absolute right-28 top-[-23px] z-50 rounded-sm bg-slate-400 p-2 text-xs font-bold text-slate-800 duration-300 hover:bg-indigo-200 lg:top-4"
       >Edit Blog</button>
 
       <button
         id="delButton"
         data-id="{{id}}"
-        class="absolute z-50 right-4 top-[-23px] lg:top-4 text-xs font-bold rounded-sm bg-slate-400 p-2 text-slate-800 duration-300 hover:bg-indigo-200"
+        class="absolute right-4 top-[-23px] z-50 rounded-sm bg-slate-400 p-2 text-xs font-bold text-slate-800 duration-300 hover:bg-indigo-200 lg:top-4"
       >Delete Blog</button>
     {{/if}}
     <form
@@ -41,55 +38,55 @@
       style="display: none;"
     >
       <div class="flex justify-center">
-        <hr class="border border-slate-400 mb-4 w-48 rounded-lg" />
+        <hr class="mb-4 w-48 rounded-lg border border-slate-400" />
       </div>
-      <h3 class="text-center font-bold text-xl mb-1">Edit Blog</h3>
-      <div class="flex flex-col items-center gap-2 my-4">
+      <h3 class="mb-1 text-center text-xl font-bold">Edit Blog</h3>
+      <div class="my-4 flex flex-col items-center gap-2">
         <label class="flex-nowrap font-bold" for="newBlogTitle">New Blog Title:</label>
         <input
-          class="w-full p-2 my-2 bg-slate-0 rounded-md border-2 focus:outline-none"
+          class="bg-slate-0 my-2 w-full rounded-md border-2 p-2 focus:outline-none"
           type="text"
           id="newBlogTitle"
           name="newBlogTitle"
         />
       </div>
-      <div class="flex flex-col items-center gap-2 mb-4">
+      <div class="mb-4 flex flex-col items-center gap-2">
         <label class="font-bold" for="blogContent">Content:</label>
         <textarea
-          class="w-full h-64 p-2 my-2 bg-slate-0 rounded-md border-2 focus:outline-none"
+          class="bg-slate-0 my-2 h-64 w-full rounded-md border-2 p-2 focus:outline-none"
           id="newBlogContent"
           name="newBlogContent"
         ></textarea>
       </div>
-      <div class="flex justify-center items-center">
+      <div class="flex items-center justify-center">
         <button
           type="submit"
-          class="mt-2 border-2 font-bold border-slate-500 rounded-md bg-slate-400 p-2 text-slate-800 duration-300 hover:bg-indigo-200"
+          class="mt-2 rounded-md border-2 border-slate-500 bg-slate-400 p-2 font-bold text-slate-800 duration-300 hover:bg-indigo-200"
         >Edit Blog</button>
       </div>
     </form>
   </section>
 
   <section
-    class="w-3/5 max-w-lg relative bg-[#231f39]/60 rounded-[6px] shadow-[0px_15px_39px_16px_rgba(52,45,91,0.65)] backdrop-blur-sm mx-2 mb-8 p-6 overflow-hidden"
+    class="relative mx-2 mb-8 w-3/5 max-w-lg overflow-hidden rounded-[6px] bg-[#231f39]/60 p-6 shadow-[0px_15px_39px_16px_rgba(52,45,91,0.65)] backdrop-blur-sm"
     id="commentSection"
   >
     <div class="mt-5">
-      <h3 class="text-center font-bold text-xl mb-1">Leave a Comment!</h3>
+      <h3 class="mb-1 text-center text-xl font-bold">Leave a Comment!</h3>
       {{#if logged_in}}
         <form class="form newCommentForm mb-4" data-id="{{id}}">
 
-          <div class="flex items-center gap-2 justify-center">
+          <div class="flex items-center justify-center gap-2">
             <textarea
-              class="w-full h-24 p-2 m-4 bg-transparent rounded-sm border-2 border-slate-500 focus:outline-none"
+              class="m-4 h-24 w-full rounded-sm border-2 border-slate-500 bg-transparent p-2 focus:outline-none"
               id="comment"
               name="comment"
             ></textarea>
           </div>
-          <div class="flex justify-center items-center">
+          <div class="flex items-center justify-center">
             <button
               type="submit"
-              class="mt-2 font-bold rounded-sm bg-slate-400 p-2 px-3 text-slate-800 duration-300 hover:bg-indigo-200"
+              class="mt-2 rounded-sm bg-slate-400 p-2 px-3 font-bold text-slate-800 duration-300 hover:bg-indigo-200"
             >Leave Comment</button>
           </div>
         </form>
@@ -104,7 +101,7 @@
           {{#each comments as |comment|}}
             <div class="my-3">
               <div
-                class="flex bg-[#231f39]/60 rounded-md px-4 py-2 sm:px-6 sm:py-4 leading-relaxed"
+                class="flex rounded-md bg-[#231f39]/60 px-4 py-2 leading-relaxed sm:px-6 sm:py-4"
               >
                 <div class="flex-1">
                   <strong class="text-xl">
@@ -121,9 +118,9 @@
 
                 </div>
                 {{#if comment.userIsAuthor}}
-                  <div class="flex justify-end items-center">
+                  <div class="flex items-center justify-end">
                     <button
-                      class="font-bold text-sm rounded-sm bg-slate-400 p-3 text-slate-800 duration-300 hover:bg-indigo-200"
+                      class="rounded-sm bg-slate-400 p-3 text-sm font-bold text-slate-800 duration-300 hover:bg-indigo-200"
                       data-id="{{comment.id}}"
                     >DELETE</button>
                   </div>
