--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,64 +1,135 @@
 <main
-    {{!-- TEST bg image for login --}}
-    class="h-screen flex justify-center items-center image-container bg-cover"
+  {{! TEST bg image for login }}
+  class="image-container flex h-screen items-center justify-center bg-cover"
 >
 
-{{!-- TESTING  md:h-screen--}}
-<section id="login-card" class="w-11/12 mb-12">
-  <div class="flex flex-col items-center justify-center px-6 py-8 mx-auto lg:py-0">
-      <div class="w-full bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700">
-          <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
-              <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
-                  Log in to Chat!
-              </h1>
-              <form class="space-y-4 md:space-y-6" action="#">
-                  <div>
-                      <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Your email</label>
-                      <input type="email" name="email" id="email-login" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="name@email.com" required="">
-                  </div>
-                  <div>
-                      <label for="password" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Password</label>
-                      <input type="password" name="password" id="password-login" placeholder="••••••••" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required="">
-                  </div>
-                  <button id="login" class="w-full text-white bg-violet-900 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">LOG IN</button>
-                  <p class="text-sm font-light text-gray-500 dark:text-gray-400">
-                      Don’t have an account yet? <button id="show-create" class="font-medium text-lime-600 hover:underline dark:text-primary-500">Sign up</button>
-                  </p>
-              </form>
-          </div>
+  {{! TESTING  md:h-screen}}
+  <section id="login-card" class="mb-12 w-11/12">
+    <div
+      class="mx-auto flex flex-col items-center justify-center px-6 py-8 lg:py-0"
+    >
+      <div
+        class="w-full rounded-lg bg-white shadow dark:border dark:border-gray-700 dark:bg-gray-800 sm:max-w-md md:mt-0 xl:p-0"
+      >
+        <div class="space-y-4 p-6 sm:p-8 md:space-y-6">
+          <h1
+            class="text-xl font-bold leading-tight tracking-tight text-gray-900 dark:text-white md:text-2xl"
+          >
+            Log in to Chat!
+          </h1>
+          <form class="space-y-4 md:space-y-6" action="#">
+            <div>
+              <label
+                for="email"
+                class="mb-2 block text-sm font-medium text-gray-900 dark:text-white"
+              >Your email</label>
+              <input
+                type="email"
+                name="email"
+                id="email-login"
+                class="focus:ring-primary-600 focus:border-primary-600 block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-gray-900 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-blue-500 dark:focus:ring-blue-500 sm:text-sm"
+                placeholder="name@email.com"
+                required=""
+              />
+            </div>
+            <div>
+              <label
+                for="password"
+                class="mb-2 block text-sm font-medium text-gray-900 dark:text-white"
+              >Password</label>
+              <input
+                type="password"
+                name="password"
+                id="password-login"
+                placeholder="••••••••"
+                class="focus:ring-primary-600 focus:border-primary-600 block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-gray-900 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-blue-500 dark:focus:ring-blue-500 sm:text-sm"
+                required=""
+              />
+            </div>
+            <button
+              id="login"
+              class="hover:bg-primary-700 focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800 w-full rounded-lg bg-violet-900 px-5 py-2.5 text-center text-sm font-medium text-white focus:outline-none focus:ring-4"
+            >LOG IN</button>
+            <p class="text-sm font-light text-gray-500 dark:text-gray-400">
+              Don’t have an account yet?
+              <button
+                id="show-create"
+                class="dark:text-primary-500 font-medium text-lime-600 hover:underline"
+              >Sign up</button>
+            </p>
+          </form>
+        </div>
       </div>
-  </div>
-</section>
+    </div>
+  </section>
 
-
-{{!-- Create Account --}}
-{{!-- TESTING create card --}}
-<section id="create-card" class="hidden w-11/12 mb-12">
-  <div class="mt-10 flex flex-col items-center justify-center px-6 py-8 mx-auto lg:py-0">
-      <div class="w-full bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-violet-900 dark:border-gray-700">
-          <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
-              <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
-                  Create an Account
-              </h1>
-              <form class="space-y-4 md:space-y-6" action="#">
-                   <div>
-                      <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Display Name</label>
-                      <input type="email" name="email" id="name-signup" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Name" required="">
-                  </div>
-                  <div>
-                      <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Your email</label>
-                      <input type="email" name="email" id="email-signup" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="name@email.com" required="">
-                  </div>
-                  <div>
-                      <label for="password" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Password</label>
-                      <input type="password" name="password" id="password-signup" placeholder="••••••••" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required="">
-                  </div>
-                  <button id="signup-user" class="w-full text-black bg-slate-300 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">CREATE ACCOUNT</button>
-              </form>
-          </div>
+  {{! Create Account }}
+  {{! TESTING create card }}
+  <section id="create-card" class="mb-12 hidden w-11/12">
+    <div
+      class="mx-auto mt-10 flex flex-col items-center justify-center px-6 py-8 lg:py-0"
+    >
+      <div
+        class="w-full rounded-lg bg-white shadow dark:border dark:border-gray-700 dark:bg-violet-900 sm:max-w-md md:mt-0 xl:p-0"
+      >
+        <div class="space-y-4 p-6 sm:p-8 md:space-y-6">
+          <h1
+            class="text-xl font-bold leading-tight tracking-tight text-gray-900 dark:text-white md:text-2xl"
+          >
+            Create an Account
+          </h1>
+          <form class="space-y-4 md:space-y-6" action="#">
+            <div>
+              <label
+                for="email"
+                class="mb-2 block text-sm font-medium text-gray-900 dark:text-white"
+              >Display Name</label>
+              <input
+                type="email"
+                name="email"
+                id="name-signup"
+                class="focus:ring-primary-600 focus:border-primary-600 block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-gray-900 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-blue-500 dark:focus:ring-blue-500 sm:text-sm"
+                placeholder="Name"
+                required=""
+              />
+            </div>
+            <div>
+              <label
+                for="email"
+                class="mb-2 block text-sm font-medium text-gray-900 dark:text-white"
+              >Your email</label>
+              <input
+                type="email"
+                name="email"
+                id="email-signup"
+                class="focus:ring-primary-600 focus:border-primary-600 block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-gray-900 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-blue-500 dark:focus:ring-blue-500 sm:text-sm"
+                placeholder="name@email.com"
+                required=""
+              />
+            </div>
+            <div>
+              <label
+                for="password"
+                class="mb-2 block text-sm font-medium text-gray-900 dark:text-white"
+              >Password</label>
+              <input
+                type="password"
+                name="password"
+                id="password-signup"
+                placeholder="••••••••"
+                class="focus:ring-primary-600 focus:border-primary-600 block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-gray-900 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-blue-500 dark:focus:ring-blue-500 sm:text-sm"
+                required=""
+              />
+            </div>
+            <button
+              id="signup-user"
+              class="hover:bg-primary-700 focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800 w-full rounded-lg bg-slate-300 px-5 py-2.5 text-center text-sm font-medium text-black focus:outline-none focus:ring-4"
+            >CREATE ACCOUNT</button>
+          </form>
+        </div>
       </div>
-  </div>
-</section>
+    </div>
+  </section>
 
 </main>
 
