--- a/views/mainpage.handlebars
+++ b/views/mainpage.handlebars
@@ -1,37 +1,37 @@
 <div
-  class="bg-[url(https://neluttu.github.io/pro-profile/wallpaper.jpg)] bg-[#292240] flex flex-col justify-center items-center h-full"
+  class="flex h-full flex-col items-center justify-center bg-[#292240] bg-[url(https://neluttu.github.io/pro-profile/wallpaper.jpg)]"
 >
   <div
-    class="bg-[#231f39]/60 rounded-[6px] shadow-[0px_15px_39px_16px_rgba(52,45,91,0.65)] backdrop-blur-xs my-4 px-6 overflow-hidden"
+    class="backdrop-blur-xs my-4 overflow-hidden rounded-[6px] bg-[#231f39]/60 px-6 shadow-[0px_15px_39px_16px_rgba(52,45,91,0.65)]"
   >
     <h2
-      class="my-3 text-2xl text-slate-300 uppercase font-semibold md:text-4xl"
+      class="my-3 text-2xl font-semibold uppercase text-slate-300 md:text-4xl"
     >Welcome {{username}}!</h2>
 
-    <div class="flex justify-center items-center createNew">
+    <div class="createNew flex items-center justify-center">
       <button
         id="hide-btn"
         type="submit"
-        class="mt-2 mb-8 font-bold text-md rounded-sm bg-slate-400 p-3 text-slate-800 duration-300 hover:bg-indigo-200"
+        class="text-md mb-8 mt-2 rounded-sm bg-slate-400 p-3 font-bold text-slate-800 duration-300 hover:bg-indigo-200"
       >Create New Blog</button>
     </div>
   </div>
 
   {{#if blogs.length}}
     <div
-      class="blogList h-3/6 w-3/5 max-w-lg relative bg-[#231f39]/60 rounded-[6px] shadow-[0px_15px_39px_16px_rgba(52,45,91,0.65)] backdrop-blur-sm mx-2 overflow-scroll overflow-x-hidden"
+      class="blogList relative mx-2 h-3/6 w-3/5 max-w-lg overflow-scroll overflow-x-hidden rounded-[6px] bg-[#231f39]/60 shadow-[0px_15px_39px_16px_rgba(52,45,91,0.65)] backdrop-blur-sm"
     >
-      <h3 class="text-center font-bold text-xl mb-3 py-3">Everyone's Blogs</h3>
+      <h3 class="mb-3 py-3 text-center text-xl font-bold">Everyone's Blogs</h3>
 
       {{#each blogs as |blog|}}
         <div class="flex justify-center">
           <div
-            class="flex justify-between items-center border-2 rounded-md p-2 ml-2 bg-slate-600 border-slate-600 mb-2 w-11/12"
+            class="mb-2 ml-2 flex w-11/12 items-center justify-between rounded-md border-2 border-slate-600 bg-slate-600 p-2"
           >
             <div>
               <a href="/blog/{{blog.id}}">
                 <h4
-                  class="font-bold text-lg duration-300 hover:text-indigo-400 mr-4"
+                  class="mr-4 text-lg font-bold duration-300 hover:text-indigo-400"
                 >{{blog.title}}</h4>
               </a>
               <p>Author:
@@ -49,7 +49,7 @@
             </div>
             {{#if blog.userHasBlog}}
               <button
-                class="font-bold text-sm rounded-sm bg-slate-400 p-2 text-slate-800 duration-300 hover:bg-indigo-200"
+                class="rounded-sm bg-slate-400 p-2 text-sm font-bold text-slate-800 duration-300 hover:bg-indigo-200"
                 data-id="{{blog.id}}"
               >DELETE</button>
             {{/if}}
