--- a/views/partials/chatrooms.handlebars
+++ b/views/partials/chatrooms.handlebars
@@ -1,14 +1,27 @@
 {{#each chatrooms as |chatroom|}}
   <div id="chat{{chatroom.id}}" class="hide">
-    <h2 class="text-3xl flex justify-start mt-8 py-2 pl-2 lg:ml-8 font-black text-shadow">ChatRoom: {{chatroom.title}}</h2>
+    <h2
+      class="text-shadow mt-8 flex justify-start py-2 pl-2 text-3xl font-black lg:ml-8"
+    >ChatRoom: {{chatroom.title}}</h2>
     <div class="screen chat-screen">
       <div class="header">
       </div>
-      <div class="messages py-3 px-4 overflow-y-auto h-3/5 w-11/12 ml-8 rounded-md border-solid border-2 border-sky-500 bg-gradient-to-b from-gray-700 via-gray-900 to-black" >
+      <div
+        class="messages ml-8 h-3/5 w-11/12 overflow-y-auto rounded-md border-2 border-solid border-sky-500 bg-gradient-to-b from-gray-700 via-gray-900 to-black px-4 py-3"
+      >
       </div>
       <div class="typebox my-2">
-        <input type="text" id="message-input" class="shadow appearance-none border-solid border-2 border-gray-900 rounded w-3/5 py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="username" type="text" placeholder="Type here"/>
-        <button class="bg-pink-700 rounded-md py-2 px-4 send-message">Send</button>
+        <input
+          type="text"
+          id="message-input"
+          class="focus:shadow-outline w-3/5 appearance-none rounded border-2 border-solid border-gray-900 px-3 py-2 leading-tight text-gray-700 shadow focus:outline-none"
+          id="username"
+          type="text"
+          placeholder="Type here"
+        />
+        <button
+          class="send-message rounded-md bg-pink-700 px-4 py-2"
+        >Send</button>
       </div>
       {{!-- <div>
         <button class="bg-sky-600 rounded-md p-2 delChat" data-id={{chatroom.id}}>DELETE Room</button>
@@ -17,4 +30,4 @@
   </div>
 {{/each}}
 
-{{!-- <script src="/js/deleteChat.js"></script> --}}
+{{! <script src="/js/deleteChat.js"></script> }}
