--- a/views/tags.handlebars
+++ b/views/tags.handlebars
@@ -1,10 +1,10 @@
 <div
-  class="bg-[url(https://neluttu.github.io/pro-profile/wallpaper.jpg)] bg-[#292240] flex flex-col items-center justify-center min-h-screen text-[#9e9cb6]"
+  class="flex min-h-screen flex-col items-center justify-center bg-[#292240] bg-[url(https://neluttu.github.io/pro-profile/wallpaper.jpg)] text-[#9e9cb6]"
 >
   <section
-    class="w-full max-w-[430px] relative p-4 bg-[#231f39]/60 rounded-[6px] shadow-[0px_15px_39px_16px_rgba(52,45,91,0.65)] backdrop-blur-sm mx-2 overflow-hidden"
+    class="relative mx-2 w-full max-w-[430px] overflow-hidden rounded-[6px] bg-[#231f39]/60 p-4 shadow-[0px_15px_39px_16px_rgba(52,45,91,0.65)] backdrop-blur-sm"
   >
-    <h2 class="text-2xl text-slate-300 uppercase text-center mb-4">{{tag}}
+    <h2 class="mb-4 text-center text-2xl uppercase text-slate-300">{{tag}}
       Blogs</h2>
     <div>
       {{#if blogs.length}}
@@ -12,12 +12,12 @@
           {{#each blogs as |blog|}}
             <div class="flex justify-center">
               <div
-                class="flex justify-between items-center border-2 rounded-sm p-2 w-full bg-slate-600 border-slate-600 mb-2"
+                class="mb-2 flex w-full items-center justify-between rounded-sm border-2 border-slate-600 bg-slate-600 p-2"
               >
                 <div>
                   <a href="/blog/{{blog.id}}">
                     <h4
-                      class="font-bold text-lg mr-8 duration-300 hover:text-indigo-400"
+                      class="mr-8 text-lg font-bold duration-300 hover:text-indigo-400"
                     >{{blog.title}}</h4>
                   </a>
                   <p>Author:
@@ -39,7 +39,7 @@
   </section>
   <button
     id="goBack"
-    class="flex justify-center font-bold text-sm rounded-sm mt-8 bg-slate-400 p-2 text-slate-800 duration-300 hover:bg-indigo-200"
+    class="mt-8 flex justify-center rounded-sm bg-slate-400 p-2 text-sm font-bold text-slate-800 duration-300 hover:bg-indigo-200"
   >Go Back</button>
 </div>
 
